# mir

./: CMakeLists.txt
debian/: control
examples/example-server-lib/: splash_session.cpp  splash_session.h  tiling_window_manager.h
examples/miral-kiosk/: CMakeLists.txt  kiosk_main.cpp
include/core/mir_toolkit/: common.h
src/client/: CMakeLists.txt  mirclient-debug-extension.pc.in  mirclient.pc.in  mirclientcpp.pc.in  symbols.map
src/core/: CMakeLists.txt
src/miral/: CMakeLists.txt  basic_window_manager.cpp  basic_window_manager.h  display_configuration_option.cpp  miral.pc.in  symbols.map  window_info.cpp  window_specification.cpp
src/platform/: mirplatform.pc.in  symbols.map
src/platform/graphics/: CMakeLists.txt  egl_extensions.cpp
src/platform/options/: default_configuration.cpp
src/renderer/: mirrenderer.pc.in
src/server/: CMakeLists.txt
src/server/console/: default_configuration.cpp
src/server/frontend_wayland/: data_device.cpp  wayland_connector.cpp  wayland_connector.h  wayland_default_configuration.cpp  window_wl_surface_role.cpp  window_wl_surface_role.h  wl_surface.cpp  xdg_shell_stable.cpp  xdg_shell_stable.h  xdg_shell_v6.cpp
src/server/input/: basic_seat.cpp  cursor_controller.cpp
src/server/scene/: application_session.cpp  basic_surface.cpp
src/server/shell/: surface_specification.cpp  window_management_info.cpp
tests/: CMakeLists.txt  mirtest.pc.in
tests/acceptance-tests/: test_client_cursor_api.cpp
tests/acceptance-tests/wayland/: miral_integration.cpp
tests/miral/: drag_active_window.cpp
(+8 files in other folders)
